--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-wzekq+y1(_ol(ifj!!fatak(r170#s)jkthyq+27f%#x#+icdh
-DEBUG=True
+DEBUG=False
 
 
 # database configaration
